# python-coding-challenges

./: .gitignore  README.md  pyproject.toml  pytest.ini
anyTwoNumbersSumToTarget/: methods.py  test_myfunctions.py
src/Logger/: .coverage  README.md  __init__.py  test_Logger.py
src/Logger/App/: main.py
src/anyTwoNumbersSumToTarget/: methods.py  test_methods.py
src/calculateExponents/: __init__.py  test_calculateExponents.py
src/group_anagrams/: README.md  __init__.py  test_group_anagrams.py
src/merge_intervals/: README.md  __init__.py  test_merge_intervals.py
src/most_common_word/: README.md  __init__.py  test_most_common_word.py
