[project]
name = "python-coding-challenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ptw>=1.0.1",
    "pytest>=9.0.2",
    "pytest-watch>=4.2.0",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-watch"
]
